--- a/styles.css
+++ b/styles.css
@@ -3,14 +3,6 @@
     width: 100px;
 }
 
-#green {
-    background-color: #4ef250;
-}
-
-#purple {
-    background-color: #f21f83;
-}
-
 h1, h2, h3 {
     font-family: 'Lato', sans-serif;
     /* font-family: 'Jolly Lodger', cursive; */
@@ -20,7 +12,7 @@ p, a, span, code, div, pre {
     font-family: 'Open Sans', sans-serif;
 }
 
-h3, h2, ul, li {
+h3, h2, h1, ul, li {
     margin: 0;
     padding: 0;
 }
@@ -41,6 +33,9 @@ footer{
 .title-container {
     display: flex;
     flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    align-items: center;
 }
 
 .title-logo-container {
@@ -66,10 +61,10 @@ footer{
     display: flex;
     flex-direction: row;
     list-style-type: none;
-    margin-top: 25px;
-    margin-bottom: 25px;
+    /* margin-top: 25px;
+    margin-bottom: 25px; */
     padding: 10px;
-    flex: 2;
+    /* flex: 2; */
 }
 
 .nav-item {
@@ -96,9 +91,9 @@ footer{
 }
 
 #main-title{
-    /* text-align: center; */
+    text-align: center;
     padding: 10px;
-    flex: 10;
+    /* flex: 10; */
 }
 
 #spacer{
@@ -214,7 +209,8 @@ footer{
 #bio-container{
     display: flex;
     flex-direction: row;
-    /* justify-content: center; */
+    justify-content: space-around;
+    flex-wrap: wrap;
     margin: 0 auto;
     width: 85%;
 }
@@ -223,17 +219,18 @@ footer{
     flex: .5;
 }
 
-#about-me, #picture{
-    padding: 20px;
-    flex: 5.5;
+#about-me {
+    padding: 25px;
+    /* flex: 5.5; */
 }
 
 #about-me{
     display: flex;
     flex-direction: column;
+    width: 800px;
 }
 
-#about-top, #about-bot, .about-spacer {
+#about-top {
     font-size: 20px;
 }
 
@@ -245,11 +242,8 @@ footer{
     text-decoration: none;
     white-space: pre-wrap;
     line-height: 1.5;
-    margin: 25px;
-}
-
-.about-spacer {
-    flex: 1;
+    margin: 35px;
+    font-size: 20px;
 }
 
 #picture{
@@ -259,20 +253,12 @@ footer{
 
 #picture img {
     padding: 15px;
-    border-radius: 50%;
+    /* border-radius: 50%; */
 }
 
 .basic-info-title {
-    margin: 5px;
-}
-
-.contact-list {
-    margin: 25px;
-}
-
-.contact-list-item {
-    list-style-type: none;
-    padding: 10px;
+    font-size: 32px;
+    /* margin: 10px; */
 }
 /* ----- end of bio styles ----- */
 
@@ -316,3 +302,34 @@ footer{
     width: 150px;
 }
 /* ----- end of index styles ----- */
+
+/* ----- start of contact styles ----- */
+#contact-container {
+    display: flex;
+    justify-content: center;
+    margin: 20px auto;
+    width: 90%;
+}
+
+.contact-info {
+    /* display: flex;
+    flex-direction: column; */
+}
+
+.contact-info div, .contact-info h2, .contact-info ul, .contact-info li {
+    text-align: center;
+}
+
+.contact-info div {
+    margin: 25px;
+}
+
+.contact-list {
+    margin: 25px;
+}
+
+.contact-list-item {
+    list-style-type: none;
+    padding: 10px;
+}
+/* ----- end of contact styles ----- */
